--- a/css/main.css
+++ b/css/main.css
@@ -2,9 +2,11 @@ body {
     font-family: Arial, sans-serif;
 }
 
+
 .hero {
     height: 100vh;
-    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('background.jpg') no-repeat center center/cover;
+    background:url('/images/header.jpeg') no-repeat center center/cover;
+    color: black;
 }
 
 .fade-in {
