--- a/css/main.css
+++ b/css/main.css
@@ -25,3 +25,17 @@ body {
 .delay {
     animation-delay: 0.5s;
 }
+
+.gallery-img {
+    object-fit: cover;
+    width: 100%;
+    height: 250px; /* Adjust this height to your liking */
+    border-radius: 10px; /* Optional: for rounded corners */
+}
+
+.bio-img {
+    object-fit: cover;
+    width: 100%;
+    height: 250px; /* Adjust this height to your liking */
+    border-radius: 10px; /* Optional: for rounded corners */
+}
