--- a/css/main.css
+++ b/css/main.css
@@ -33,7 +33,7 @@ body {
     border-radius: 10px; /* Optional: for rounded corners */
 }
 
-.bio-img {
+.img {
     object-fit: cover;
     width: 100%;
     height: 250px; /* Adjust this height to your liking */
